# pacman

./: .gitignore  CMakeLists.txt
resources/maps/: map-01
src/: animation.cpp  game.cpp  main.cpp  map.cpp  player.cpp
src/headers/: animation.h  game.h  globals.h  globals.hpp  map.h  paths.hpp  player.h  types.h  utils.h
src/utils/: utils.cpp
tests/: tests.cpp
